--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ lazy_static = "1.4.0"
 pest = "2.1.3"
 pest_derive = "2.1.0"
 float-pretty-print = "0.1.1"
+nalgebra = "0.29"
+newton_rootfinder = "0.9.1"
