--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,11 @@
 name: Deploy to Github pages
 
-on: [workflow_dispatch]
-
+# on: [workflow_dispatch]
+on:
+  push:
+    branches:
+      - main
+      
 jobs:
   deploy:
     runs-on: ubuntu-latest
